# ohio-election-viewer

./: .gitignore  Cargo.toml  Ohio Subdivision Changes.xlsx  Ohio Subdivision Codes.xlsx  README.md  backup.db.schema  city-converter.py  election-converter.py  elections.db  elections.sqlite3  errata.md  index.html  qgis-layer-editor.py  sql.js  worker.js
2021/: tl_2021_39_place.dbf  tl_2021_39_place.shp.ea.iso.xml  tl_2021_39_place.shp.iso.xml  tl_2021_39_place.shx
2023/: tl_2023_39_cousub.shp.ea.iso.xml  tl_2023_39_cousub.shp.iso.xml  tl_2023_39_cousub.shx
county/: REFER_COUNTY.dbf  REFER_COUNTY.sbn  REFER_COUNTY.shx
elections/2022/: general-precinct-conversion.xlsx
elections/2022/general/: municipal-codes.xlsx  precinct-conversions.xlsx
elections/2022/general-maps/county/: REFER_COUNTY.shp  REFER_COUNTY.shp.xml  county.sbx  county.xml
elections/2022/general-maps/subdivision/: subdivision.dbf
public/: index.html  sql.js
src/: converter.rs  main.rs  router.rs
