[package]
name = "ohio-election-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3"
office = "0"
rusqlite = "0"
clap = { version = "4", features = ["derive"] }
serde = "1"
colored = "2"
shapefile = "0"
dbase = "0"
rust_xlsxwriter = "0"