[package]
name = "oev-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3"
calamine = "0"
rusqlite = { version = "0", features = ["bundled", "chrono"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
colored = "2"
shapefile = "0"
dbase = "0"
rust_xlsxwriter = "0"
chrono = { version = "0", features = ["serde"] }

[profile.release]
lto = true